# RadioTelescope

./: .gitignore  README.md
Client/: main.py
KiCad_Project/: RadioTelescope.kicad_prl  RadioTelescope.kicad_pro  RadioTelescope.kicad_sch  ~RadioTelescope.kicad_sch.lck
telescope-controller/: Cargo.toml
telescope-controller/.cargo/: config.toml
telescope-controller/src/: main.rs  temp.rs
telescope-controller/tests/: integration.rs
