[package]
name = "telescope-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
debouncr = "0.2.2"
panic-halt = "0.2"
stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "rt"] }
rtt-target = "0.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
